--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -706,7 +706,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
-			.image.main {
+			.image.main.secondary {
 				margin: 2rem 0;
 			}
 
@@ -714,7 +714,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 480px) {
 
-			.image.main {
+			.image.main.secondary {
 				margin: 1.5rem 0;
 			}
 
